[gd_scene load_steps=20 format=3 uid="uid://bbixjs8kdo7j"]

[ext_resource type="Script" path="res://core/game_controller.gd" id="1_4ubsc"]
[ext_resource type="PackedScene" uid="uid://3stwd766vpxl" path="res://core/play_area.tscn" id="2_xaokt"]
[ext_resource type="Script" path="res://core/Camera.gd" id="3_psfdv"]
[ext_resource type="Shader" path="res://core/ManaFill.gdshader" id="4_6xaee"]
[ext_resource type="Texture2D" uid="uid://b52eybbdtmgq2" path="res://ui/ManaFill.png" id="4_bbh6m"]
[ext_resource type="Script" path="res://ui/GameplayUI.gd" id="4_kj8t1"]
[ext_resource type="FontFile" uid="uid://dqugnyvgptgq0" path="res://ui/fonts/Fairytale.ttf" id="4_weo8u"]
[ext_resource type="Texture2D" uid="uid://brhsrmhwqbts0" path="res://ui/ManaBall.png" id="5_a1wq6"]
[ext_resource type="FontFile" uid="uid://bmwvsl65v7etv" path="res://ui/fonts/Dante.ttf" id="5_ncdfs"]
[ext_resource type="Texture2D" uid="uid://ckp7r2xr7namj" path="res://ui/ManaSurface.png" id="6_c24mh"]
[ext_resource type="Texture2D" uid="uid://cqrsjy1wa5mk1" path="res://ui/AbilityBall.png" id="8_r6edc"]
[ext_resource type="Texture2D" uid="uid://dghrmefrjqvnc" path="res://ui/DashBook.png" id="9_buipd"]
[ext_resource type="Texture2D" uid="uid://ddml00rfkucsy" path="res://ui/Dash1.png" id="10_kav2h"]
[ext_resource type="Texture2D" uid="uid://bopfaewgn8nmg" path="res://ui/Dash2.png" id="11_bkyve"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8qm36"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yuoex"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ad0g2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ywihm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v1mjq"]
shader = ExtResource("4_6xaee")
shader_parameter/fill = 0.5

[node name="World" type="Node2D" groups=["GameController"]]
script = ExtResource("1_4ubsc")
play_area_scene = ExtResource("2_xaokt")

[node name="Camera" type="Camera2D" parent="." groups=["Camera"]]
script = ExtResource("3_psfdv")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu"]
layout_mode = 2
offset_left = 420.0
offset_right = 1500.0
offset_bottom = 1080.0
alignment = 1

[node name="Label" type="Label" parent="UI/MainMenu/VBoxContainer"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 4
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 2
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
theme_override_colors/font_color = Color(0.439216, 0.341176, 0.611765, 1)
theme_override_colors/font_shadow_color = Color(0.878431, 0.588235, 0.658824, 1)
theme_override_colors/font_outline_color = Color(0.0392157, 0.0352941, 0.0705882, 1)
theme_override_fonts/font = ExtResource("4_weo8u")
theme_override_font_sizes/font_size = 140
text = "Lich"
label_settings = null
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 0
justification_flags = 163
clip_text = false
text_overrun_behavior = 0
uppercase = false
tab_stops = PackedFloat32Array()
lines_skipped = 0
max_lines_visible = -1
visible_characters = -1
visible_characters_behavior = 0
visible_ratio = 1.0
text_direction = 0
language = ""
structured_text_bidi_override = 0
structured_text_bidi_override_options = []
script = null

[node name="Play" type="Button" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.588235, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.0392157, 0.0352941, 0.0705882, 1)
theme_override_colors/font_hover_color = Color(0.439216, 0.341176, 0.611765, 1)
theme_override_colors/font_focus_color = Color(0.439216, 0.341176, 0.611765, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("5_ncdfs")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_8qm36")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yuoex")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ad0g2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ywihm")
text = "Play"

[node name="Quit" type="Button" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.588235, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.0392157, 0.0352941, 0.0705882, 1)
theme_override_colors/font_hover_color = Color(0.439216, 0.341176, 0.611765, 1)
theme_override_colors/font_focus_color = Color(0.439216, 0.341176, 0.611765, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("5_ncdfs")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_8qm36")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yuoex")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ad0g2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ywihm")
text = "Quit"

[node name="Label" type="Label" parent="UI/MainMenu"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 1
layout_mode = 1
anchors_preset = 2
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -32.0
offset_right = 205.0
offset_bottom = -8.0
grow_horizontal = 1
grow_vertical = 0
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 0
size_flags_vertical = 8
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 2
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
theme_override_colors/font_color = Color(0.878431, 0.588235, 0.658824, 1)
theme_override_fonts/font = ExtResource("5_ncdfs")
theme_override_font_sizes/font_size = 24
text = "Made  by  Lunatic  Dancer"
label_settings = null
horizontal_alignment = 0
vertical_alignment = 2
autowrap_mode = 0
justification_flags = 163
clip_text = false
text_overrun_behavior = 0
uppercase = false
tab_stops = PackedFloat32Array()
lines_skipped = 0
max_lines_visible = -1
visible_characters = -1
visible_characters_behavior = 0
visible_ratio = 1.0
text_direction = 0
language = ""
structured_text_bidi_override = 0
structured_text_bidi_override_options = []
script = null

[node name="GameplayUI" type="Control" parent="UI"]
visible = false
texture_filter = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_kj8t1")

[node name="Mana" type="Control" parent="UI/GameplayUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -130.0
offset_right = 130.0
grow_vertical = 0

[node name="Fill" type="TextureRect" parent="UI/GameplayUI/Mana"]
texture_filter = 3
material = SubResource("ShaderMaterial_v1mjq")
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -127.0
offset_right = 128.0
grow_vertical = 0
texture = ExtResource("4_bbh6m")

[node name="Surface" type="TextureRect" parent="UI/GameplayUI/Mana"]
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -73.0
offset_right = 63.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 10)
texture = ExtResource("6_c24mh")

[node name="Frame" type="TextureRect" parent="UI/GameplayUI/Mana"]
texture_filter = 3
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -201.0
offset_right = 134.0
grow_vertical = 0
texture = ExtResource("5_a1wq6")

[node name="SpellSlot" type="Control" parent="UI/GameplayUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="AbilityIcon" type="TextureRect" parent="UI/GameplayUI/SpellSlot"]
texture_filter = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
grow_horizontal = 0
grow_vertical = 0

[node name="Frame" type="TextureRect" parent="UI/GameplayUI/SpellSlot"]
texture_filter = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -134.0
offset_top = -201.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("8_r6edc")

[node name="AbilityHolder" type="Control" parent="UI/GameplayUI/SpellSlot"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Dashes" type="Control" parent="UI/GameplayUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Book" type="TextureRect" parent="UI/GameplayUI/Dashes"]
texture_filter = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -73.0
offset_right = 106.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("9_buipd")

[node name="Left" type="TextureRect" parent="UI/GameplayUI/Dashes"]
texture_filter = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -51.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("10_kav2h")

[node name="Right" type="TextureRect" parent="UI/GameplayUI/Dashes"]
texture_filter = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -48.0
offset_right = 90.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("11_bkyve")

[connection signal="pressed" from="UI/MainMenu/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="UI/MainMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
